--- a/Lesson_12/index.html
+++ b/Lesson_12/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css" />
     <script src="https://kit.fontawesome.com/0bee8dce34.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
     <header class="header">
         <div class="navigation container">
             <a href="#" class="logo">
-                <img src="./images/logo.svg" alt="Fully Agency Logo">
+                <img src="./images/logo.svg" alt="Fully Agency Logo" />
             </a>
             <nav class="nav_menu">
                 <ul class="nav_list">
@@ -30,19 +29,19 @@
         <div class="hero">
             <section class="container hero_contents">
                 <div class="column">
-                    <p class="intro_text">
-                        An agency that helps you
-                    </p>
+                    <p class="intro_text">An agency that helps you</p>
                     <h1 class="heading">Grow your Business</h1>
                     <p class="description">
-                        Build an award winning website that grows your business with the help of Last Door. Our 15+
-                        years of experience in
-                        building websites have grown businesses of 1000+ clients.
+                        Build an award winning website that grows your business with the
+                        help of Last Door. Our 15+ years of experience in building
+                        websites have grown businesses of 1000+ clients.
                     </p>
-                    <button class="btn first_button">Get your free consulation now</button>
+                    <button class="btn first_button">
+                        Get your free consulation now
+                    </button>
                 </div>
                 <div>
-                    <img src="./images/hero.svg" alt="Girl on a staircase in a room">
+                    <img src="./images/hero.svg" alt="Girl on a staircase in a room" />
                 </div>
             </section>
         </div>
@@ -52,30 +51,30 @@
             <h2 class="banner_title">Why choose Agency theme</h2>
             <div class="cards">
                 <div class="column">
-                    <iicon mg src="./images-ultra-responsive.svg" alt="Different deviceicon s" class="banner">
-                        <p class="heading">Ultra Responsive</p>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
-                            fermentum vestibulum.
-                        </p>
+                    <img src="./images/icon-ultra-responsive.svg" alt="Ultra responsive icon" class="banner_icon" />
+                    <p class="heading">Ultra Responsive</p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+                        hendrerit in erat nec fermentum vestibulum.
+                    </p>
                 </div>
 
                 <div class="column">
-                    <iicon mg src="./images-award-winning-design.svg" alt="An awaricon d" class="banner">
-                        <p class="heading">Award Winning Design</p>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
-                            fermentum vestibulum.
-                        </p>
+                    <img src="./images/icon-award-winning-design.svg" alt="An award icon" class="banner_icon" />
+                    <p class="heading">Award Winning Design</p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+                        hendrerit in erat nec fermentum vestibulum.
+                    </p>
                 </div>
 
                 <div class="column">
-                    <iicon mg src="./images-online-support.svg" alt="Customer supporicon t" class="banner">
-                        <p class="heading">Support & Updates</p>
-                        <p class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit in erat nec
-                            fermentum vestibulum.
-                        </p>
+                    <img src="./images/icon-online-support.svg" alt="Customer support" class="banner_icon" />
+                    <p class="heading">Support & Updates</p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+                        hendrerit in erat nec fermentum vestibulum.
+                    </p>
                 </div>
             </div>
         </div>
@@ -122,52 +121,153 @@
 
                 <div class="cards">
                     <div class="column">
-                        <p class="note">We specialise in website design, user interfaces, development & copyrightin.
+                        <p class="note">
+                            We specialise in website design, user interfaces, development &
+                            copyrighting.
                         </p>
                         <p class="description">
-                            We’re a website development studio focussed on creating immersive digital strategies for
-                            your business that take
-                            established brands to new heights and launch ambitious start-ups towards their goals.
+                            We’re a website development studio focussed on creating
+                            immersive digital strategies for your business that take
+                            established brands to new heights and launch ambitious start-ups
+                            towards their goals.
                         </p>
                     </div>
                     <div class="column2">
                         <p class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis nisl vulputate justo
-                            consequat tempor. Nam
-                            gravida sed ipsum in pellentesque. Cras pellentesque placerat cursus. Ut ultrices ultricies
-                            finibus. Donec rutrum felis
-                            convallis, efficitur tellus sit amet, tristique metus. Integer eget sagittis urna.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                            iaculis nisl vulputate justo consequat tempor. Nam gravida sed
+                            ipsum in pellentesque. Cras pellentesque placerat cursus. Ut
+                            ultrices ultricies finibus. Donec rutrum felis convallis,
+                            efficitur tellus sit amet, tristique metus. Integer eget
+                            sagittis urna.
                         </p>
                         <p class="description">
-                            Aenean et facilisis mi, ut posuere eros. Vivamus nec velit at diam pretium blandit id nec
-                            urna.
-                            Aenean dignissim
-                            vehicula sapien ut vehicula. Aliquam gravida metus non ullamcorper vestibulum. Mauris
-                            lobortis
-                            purus at diam posuere, at
-                            molestie massa lobortis.
+                            Aenean et facilisis mi, ut posuere eros. Vivamus nec velit at
+                            diam pretium blandit id nec urna. Aenean dignissim vehicula
+                            sapien ut vehicula. Aliquam gravida metus non ullamcorper
+                            vestibulum. Mauris lobortis purus at diam posuere, at molestie
+                            massa lobortis.
                         </p>
                     </div>
                 </div>
 
                 <div>
                     <ul class="logo_list">
-                        <li><img src="./images/logo-hello-fresh.svg" alt="Hello Fresh logo" class="client_logo"></li>
+                        <li>
+                            <a href="#"><img src="./images/logo-hello-fresh.svg" alt="Hello Fresh logo"
+                                    class="client_logo" /></a>
+                        </li>
 
-                        <li><img src="./images/logo-trivago.svg" alt="Trivago logo" class="client_logo"></li>
+                        <li>
+                            <a href="#"><img src="./images/logo-trivago.svg" alt="Trivago logo"
+                                    class="client_logo" /></a>
+                        </li>
 
-                        <li><img src="./images/logo-los-angelese-times.svg" alt="Los Angeles Times logo"
-                                class="client_logo"></li>
+                        <li>
+                            <a href="#"><img src="./images/logo-los-angelese-times.svg" alt="Los Angeles Times logo"
+                                    class="client_logo" /></a>
+                        </li>
 
-                        <li><img src="./images/logo-oracle.svg" alt="Oracle logo" class="client_logo"></li>
+                        <li>
+                            <a href="#"><img src="./images/logo-oracle.svg" alt="Oracle logo" class="client_logo" /></a>
+                        </li>
 
-                        <li><img src="./images/logo-target.svg" alt="Target logo" class="client_logo"></li>
+                        <li>
+                            <a href="#"><img src="./images/logo-target.svg" alt="Target logo" class="client_logo" /></a>
+                        </li>
                     </ul>
                 </div>
+            </div>
+        </div>
 
+        <div class="action">
+            <div class="container action_section">
+                <div class="column">
+                    <p class="heading">Please Relax, we will do the work.</p>
+
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                        iaculis nisl vulputate justo consequat tempor. Nam gravida sed
+                        ipsum in pellentesque. Cras pellentesque placerat cursus.
+                    </p>
+
+                    <div class="check_list">
+                        <div class="list_item">
+                            <i class="check_icon fa-solid fa-check"></i>
+                            <div class="list_text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </div>
+                        </div>
+
+                        <div class="list_item">
+                            <i class="check_icon fa-solid fa-check"></i>
+                            <div class="list_text">
+                                Morbi iaculis nisl vulputate justo consequat tempor.
+                            </div>
+                        </div>
+
+                        <div class="list_item">
+                            <i class="check_icon fa-solid fa-check"></i>
+                            <div class="list_text">
+                                Nam gravida sed ipsum in pellentesque.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="relax_illustration">
+                    <img src="./images/image-relaxing.svg" alt="Relaxing Lady" />
+                </div>
+            </div>
+        </div>
+
+        <div class="website">
+            <div class="small_container">
+                <p class="intro_text">An Agency That Helps You</p>
+                <p class="heading">Start Building your Website today</p>
+                <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices purus lectus, et accumsan
+                    nibh suscipit sed.
+                    Nullam lorem dui, congue pharetra posuere vel, imperdiet ac lorem.
+                </p>
+                <button class="btn get_started_button">Get started now</button>
+            </div>
+        </div>
+
+        <div class="contact">
+            <div class="container">
+                <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
+                    <p class="form_title">Contact Us</p>
+                    <div class="form_list">
+                        <div class="form_item">
+                            <label for="username" class="input_field">Full name
+                                <input type="text" name="username" placeholder="Ram Kaji">
+                            </label>
+                        </div>
+
+                        <div class="form_item">
+                            <label for="user_email" class="input_field">Your email address
+                                <input type="email" placeholder="hello@lastdoor.store">
+                            </label>
+                        </div>
+
+                        <div class="form_item">
+                            <label for="user_message" class="input_field">Your message
+                                <textarea name="user_message" id="user_message"
+                                    placeholder="Type your message here..."></textarea>
+                            </label>
+                        </div>
+
+                        <button type="submit" class="submit_button btn">Submit Your Message</button>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
+
+    <footer>
+        <p class="copyright">Copyright © 2018 LastDoor.Store </p>
+    </footer>
 </body>
 
 </html>
